<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mobilmotors.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.mobilmotors.ui.conta.PerfilFragment"
        android:label="@string/menu_conta"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_config"
        android:name="com.example.mobilmotors.ui.config.configFragment"
        android:label="@string/menu_conf"
        tools:layout="@layout/fragment_config" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.mobilmotors.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_compartilhar"
        android:name="com.example.mobilmotors.ui.home.HomeFragment"
        android:label="@string/menu_compart"
        tools:layout="@layout/fragment_compart" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.mobilmotors.ui.conta.LoginFragment"
        android:label="Entrar"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_avaliar"
        android:name="com.example.mobilmotors.ui.avaliar.AvaliarFragment"
        android:label="Avaliar" />
    <fragment
        android:id="@+id/nav_cadastrar"
        android:name="com.example.mobilmotors.ui.conta.CadastrarFragment"
        android:label="Cadastrar" />

</navigation>